# ChangeLog for app-dicts/edictionary
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/edictionary/ChangeLog,v 1.16 2014/01/05 11:13:54 pacho Exp $

  05 Jan 2014; Pacho Ramos <pacho@gentoo.org> -edictionary-2.2.ebuild,
  metadata.xml:
  Cleanup due http://gentoo.2317880.n4.nabble.com/app-dicts-herd-is-empty-
  td271273.html

*edictionary-2.6 (22 Jul 2010)

  22 Jul 2010; Peter Volkov <pva@gentoo.org> +edictionary-2.6.ebuild:
  Version bump, bug #324857, thank Dean Matzkov for report. Fixes word
  lookup, bug #313553, thank urcindalo for report.

  06 Apr 2010; Jonathan Callen <abcd@gentoo.org> edictionary-2.2.ebuild:
  Bump to EAPI=3, add prefix keywords

  11 Aug 2007; Santiago M. Mola <coldwind@gentoo.org>
  -edictionary-1.2.ebuild:
  Removing old version.

  31 Jul 2007; Matti Bickel <mabi@gentoo.org> edictionary-2.2.ebuild:
  ~ppc readded (bug #184179)

  05 Jul 2007; Christoph Mende <angelos@gentoo.org> edictionary-2.2.ebuild:
  Added ~amd64 wrt bug #184179

  04 Jul 2007; Tom Gall <tgall@gentoo.org> edictionary-2.2.ebuild:
  added ~ppc64, bug #184179

*edictionary-2.2 (04 Jul 2007)

  04 Jul 2007; Santiago M. Mola <coldwind@gentoo.org>
  +edictionary-2.2.ebuild:
  Version bump thanks to David Morton. Fixes bug #166608

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  23 Aug 2004; Danny van Dyk <kugelfang@gentoo.org> edictionary-1.2.ebuild:
  Marked ~amd64.

  05 May 2004; David Holm <dholm@gentoo.org> edictionary-1.2.ebuild:
  Added to ~ppc.

*edictionary-1.2 (04 May 2004)

  04 May 2004; Abhishek Amit <abhishek@gentoo.org> +metadata.xml,
  +edictionary-1.2.ebuild:
  Inital import. Submitted by Jon Hood <squinky86@gentoo.org> in bug #30516